--- a/dicee.html
+++ b/dicee.html
@@ -17,12 +17,20 @@
       <div class="dice">
         <p class="player">Player 1</p>
         <!-- TODO#2: add dice6.png in /images/ to both img elements -->
-        <img class="img1" src="/images/dices/dice6.png" />
+        <img
+          class="img1"
+          src="/images/dices/dice6.png"
+          alt="dice-placeholder-pic"
+        />
       </div>
 
       <div class="dice">
         <p class="player">Player 2</p>
-        <img class="img2" src="/images/dices/dice6.png" />
+        <img
+          class="img2"
+          src="/images/dices/dice6.png"
+          alt="dice-placeholder-pic"
+        />
       </div>
     </div>
     <!-- add a return to homepage button -->
